tests/rosetta/out/Prolog/100-doors-2.pl
% Generated by Mochi compiler v0.10.26 on 2025-07-16T11:47:49Z
:- style_check(-singleton).
:- initialization(main, main).
main :-
    _V0 is 1,
    nb_setval(door, _V0),
    _V1 is 0,
    nb_setval(incrementer, _V1),
    catch(
        (
            _V2 is 101 - 1,
            between(1, _V2, Current),
                catch(
                    (
                        term_string(Current, _V3),
                        string_concat("Door ", _V3, _V4),
                        string_concat(_V4, " ", _V5),
                        nb_setval(line, _V5),
                        nb_getval(door, _V6),
                        ((Current == _V6) ->
                            nb_getval(line, _V7),
                            string_concat(_V7, "Open", _V8),
                            nb_setval(line, _V8),
                            nb_getval(incrementer, _V9),
                            _V10 is (_V9 + 1),
                            nb_setval(incrementer, _V10),
                            nb_getval(door, _V11),
                            nb_getval(incrementer, _V12),
                            _V13 is ((_V11 + (2 * _V12)) + 1),
                            nb_setval(door, _V13),
                            true
                        ;
                            nb_getval(line, _V14),
                            string_concat(_V14, "Closed", _V15),
                            nb_setval(line, _V15),
                            true
                        ),
                        nb_getval(line, _V16),
                        writeln(_V16),
                        true
                    ), continue, true),
                    fail
                ; true
            ), break, true),
            true.
